<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">My Nanodegree Apps</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="footbal_scores">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_app">MY OWN APP</string>
</resources>
