<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.portfolioapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--android:id="@+id/textView" />-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nanodegree_apps"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify_button"
            android:layout_gravity="center_horizontal"
            android:background="#d58618"
            android:layout_marginBottom="20dp"
            android:onClick="displayMessage"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/footbal_scores"
            android:id="@+id/scores_app"
            android:layout_gravity="center_horizontal"
            android:background="#d58618"
            android:layout_marginBottom="20dp"
            android:onClick="displayMessage"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/library_app"
            android:layout_gravity="center_horizontal"
            android:background="#d58618"
            android:layout_marginBottom="20dp"
            android:onClick="displayMessage"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/build_bigger"
            android:id="@+id/build_bigger"
            android:layout_gravity="center_horizontal"
            android:background="#d58618"
            android:layout_marginBottom="20dp"
            android:onClick="displayMessage"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_reader"
            android:layout_gravity="center_horizontal"
            android:background="#d58618"
            android:layout_marginBottom="20dp"
            android:onClick="displayMessage"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/my_app"
            android:id="@+id/own_app"
            android:layout_gravity="center_horizontal"
            android:background="#db240c"
            android:onClick="displayMessage"/>
    </LinearLayout>
</RelativeLayout>
